add food service with some functions

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,6 +15,7 @@
                 <div fxLayout="row" fxLayoutAlign="end center">
                         <a mat-button (click)=auth.logout()>Logout</a>
                         <a routerLink="/dashboard" mat-button>Dashboard</a>
+                        <a routerLink="/foods" mat-button>Foods</a>
                         <a routerLink="/mypage" mat-button>MyPage</a>
                 </div>
         </ng-template>
