--- a/src/app/battle/battle.component.html
+++ b/src/app/battle/battle.component.html
@@ -1,44 +1,45 @@
-<div class="card-container" fxLayout="row"  fxLayoutAlign="center center">
-  <mat-card class="example-card box1"  >
-    <mat-card-header>
-      <div mat-card-avatar class="example-header-image"></div>
-      <mat-card-title>Shiba Inu</mat-card-title>
-      <mat-card-subtitle>Dog Breed</mat-card-subtitle>
-    </mat-card-header>
-    <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-    <mat-card-content>
-      <p>
-        The Shiba Inu 
-      </p>
-    </mat-card-content>
-    <mat-card-actions>
-      <button mat-button>LIKE</button>
-      <button mat-button>SHARE</button>
-    </mat-card-actions>
-  </mat-card>
 
-  
+  <div class="round-banner" fxLayout="row"  fxLayoutAlign="center center">
+  <b>8 강</b>
 
-  <mat-card class="example-card box2">
+  </div>
+
+
+  <div class="card-container" fxLayout="row"  fxLayoutAlign="center center">
+    <mat-card class="example-card box1" >
       <mat-card-header>
         <div mat-card-avatar class="example-header-image"></div>
-        <mat-card-title>Shiba Inu</mat-card-title>
-        <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+        <mat-card-title>누렁이 보신탕</mat-card-title>
+        <mat-card-subtitle>20,000 원</mat-card-subtitle>
       </mat-card-header>
       <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
       <mat-card-content>
         <p>
-          The Shiba Inu 
+          노란 보신탕집
         </p>
       </mat-card-content>
-      <mat-card-actions>
-        <button mat-button>LIKE</button>
-        <button mat-button>SHARE</button>
-      </mat-card-actions>
+    
     </mat-card>
-
-<img fxLayoutAlign="center center" class="versus" src="http://static1.comicvine.com/uploads/original/11112/111129141/5440487-1122329314-52705.png">
 
     
 
-  </div>
+    <mat-card class="example-card box2">
+        <mat-card-header>
+          <div mat-card-avatar class="example-header-image"></div>
+          <mat-card-title>흰둥이 보신탕</mat-card-title>
+          <mat-card-subtitle>30,000 원</mat-card-subtitle>
+        </mat-card-header>
+        <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+        <mat-card-content>
+          <p>
+            하얀 보신탕집
+          </p>
+        </mat-card-content>
+        
+      </mat-card>
+
+  <img fxLayoutAlign="center center" class="versus" src="http://static1.comicvine.com/uploads/original/11112/111129141/5440487-1122329314-52705.png">
+
+      
+
+    </div>
