--- a/src/app/mypage/mypage.component.html
+++ b/src/app/mypage/mypage.component.html
@@ -19,7 +19,7 @@
                             <mat-divider></mat-divider>
                             <mat-list-item>Gender     : {{user.gender}}</mat-list-item>
                             <mat-divider></mat-divider>
-                            <mat-list-item>Address     : {{user.address}}</mat-list-item>
+                            <mat-list-item>Address     : {{user.addr}}</mat-list-item>
                             </mat-list>
                   </mat-card>
                   <br>
@@ -60,7 +60,7 @@
                                 </mat-select>
                             </mat-form-field>
                         </mat-expansion-panel>
-  
+                        <btn-daum-address (result)="setDaumAddressApi($event)" [options]="daumAddressOptions"></btn-daum-address>
 
                     </mat-accordion>
   
