--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,7 +1,8 @@
 <div class='container' fxLayout="row" fxLayoutAlign="space-evenly center">
-  <div id="background"  fxLayout="row" fxLayoutAlign="space-around end" >
+  <div id="background"  fxLayout="row" fxLayoutAlign="space-evenly end" >
 
     <img  class="maintxt" src="../../assets/image/main_text.png" alt="">
+
     <div>
     <img src="../../assets/image/arrow.png"  class="arrow" alt="">
     <a routerLink="/mypage" ><img class="stamp" src="../../assets/image/ohmuckji.png" alt=""></a>
