--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
+<!--  -->
+<div  fxLayout="column" fxLayoutAlign="center stretch" >
 <app-inheader></app-inheader>
-<app-header></app-header>
 <router-outlet class="route"></router-outlet>
+</div>
