--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -4,7 +4,6 @@ h2{
 }
 
 .logimg{
-    margin-right: 110%;
     height: 80px; 
 }
 
@@ -18,7 +17,10 @@ a{
 
 .tool{
     margin-top: 7%;
-    position: fixed;
+    position: absolute;
+    background-color: rgba(255, 255, 255, 0);
+    padding-left: 20%;
+    padding-right: 20%;
 }
 
 i{
