--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,10 +1,14 @@
-<div class="container" fxLayout="column" fxLayoutAlign="center stretch">
-  <br><br><br>
-<div *ngIf="auth.user | async; then authenticated else guest"  >
 
+<div class="container" fxLayout="column" fxLayoutAlign="center stretch">
+
+  <div fxLayout="column" fxLayoutAlign="center center" >
+    <div *ngIf="auth.user | async; then authenticated else guest"  >
+
+    </div>
   </div>
+</div>
+<ng-template #guest >
   
-  <ng-template #guest>
     <mat-card  class="login" fxLayout="column" fxLayoutAlign="center center">
       <h1>Google Login</h1>
       <button mat-raised-button color="warn" (click)="auth.googleLogin()">Login With Google</button>
@@ -20,4 +24,3 @@
     </div>
     </mat-card>
   </ng-template>
-</div>
