add myfood-table comp

--- a/src/app/inheader/inheader.component.html
+++ b/src/app/inheader/inheader.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar class="tool"  fxLayout="row" fxLayoutAlign="space-between center">
-    <img src="../../assets/image/logo_black.png" class="logimg" srcset="">
+    <img src="../../assets/image/logo_B.png" class="logimg" srcset="">
     <div *ngIf="auth.user | async; then authed else guest">
 
     </div>
