--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!--  -->
-<div  fxLayout="column" fxLayoutAlign="center stretch" >
+<div  fxLayout="column" fxLayoutAlign="start stretch" >
 <app-inheader></app-inheader>
 <router-outlet class="route"></router-outlet>
 </div>
