--- a/src/app/inheader/inheader.component.css
+++ b/src/app/inheader/inheader.component.css
@@ -10,10 +10,15 @@
 a{
     margin-left: 10px;
     font-size: 120%;
-    color: black;
+    color:rgb(255, 255, 255);
 }
 
 .tool{
-    background-color: rgba(0, 0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.493);
     box-shadow: 0 3px 5px -1px rgba(0,0,0,.2), 0 6px 10px 0 rgba(0,0,0,.14), 0 1px 18px 0 rgba(0,0,0,.12);
+}
+
+:host{
+    width:100%;
+    position: fixed;
 }
