--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -5,6 +5,6 @@
 
     <div>
     <img src="../../assets/image/arrow.png"  class="arrow" alt="">
-    <a routerLink="/mypage" ><img class="stamp" src="../../assets/image/ohmuckji.png" alt=""></a>
+    <a routerLink="/battle" ><img class="stamp" src="../../assets/image/ohmuckji.png" alt=""></a>
     </div>
 </div>
