--- a/src/app/mypage/mypage.component.html
+++ b/src/app/mypage/mypage.component.html
@@ -57,19 +57,18 @@
                           <br>
 
                         </mat-expansion-panel>
-
-                      
-                     
-                          
-                    
-                       
-
-
                     </mat-accordion>
   
               </div>
         </mat-tab>
+
+        <mat-tab label="MyFood">
+          <app-myfood-table></app-myfood-table>
+        </mat-tab>
       
+        <mat-tab label="History">
+
+        </mat-tab>
       </mat-tab-group>
       <br>
       <br>
