--- a/src/app/inheader/inheader.component.html
+++ b/src/app/inheader/inheader.component.html
@@ -6,7 +6,7 @@
 
     <ng-template #guest>
             <div fxLayout="row" fxLayoutAlign="end center">
-                    <a mat-button routerLink="/login">Login</a>
+                    <a mat-button (click)="openLoginDialog()">Login</a>
 
             </div>
     </ng-template>
