--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,25 +2,14 @@
 <div class="container" fxLayout="column" fxLayoutAlign="center stretch">
 
   <div fxLayout="column" fxLayoutAlign="center center" >
-    <div *ngIf="auth.user | async; then authenticated else guest"  >
-
-    </div>
+      <mat-card  class="login" fxLayout="column" fxLayoutAlign="center center">
+          <h1>Google Login</h1>
+          <button mat-raised-button color="warn" (click)="googleLogin()">Login With Google</button>
+        </mat-card>
   </div>
 </div>
-<ng-template #guest >
+
   
-    <mat-card  class="login" fxLayout="column" fxLayoutAlign="center center">
-      <h1>Google Login</h1>
-      <button mat-raised-button color="warn" (click)="auth.googleLogin()">Login With Google</button>
-    </mat-card>
-  </ng-template>
+
+
   
-  
-  <ng-template #authenticated>
-      <mat-card class="login" fxLayout="column" fxLayoutAlign="center center">
-    <div *ngIf="auth.user | async as user" fxLayout="column" fxLayoutAlign="center stretch">
-      <h1>Hello, {{user.name}}</h1>
-      <button mat-raised-button color="warn" routerLink="/mypage" >Move to MyPage</button>
-    </div>
-    </mat-card>
-  </ng-template>
