make food-detail

--- a/src/app/inheader/inheader.component.css
+++ b/src/app/inheader/inheader.component.css
@@ -1,9 +1,9 @@
 
 
 .logimg{
-    height: 40px; 
+    height: 60px; 
     
-    margin-top: 15px;
+    margin-top: 30px;
     margin-bottom: 10px;
 }
 
@@ -16,8 +16,8 @@ a{
 .tool{
     background-color: rgba(0, 0, 0, 0.493);
     box-shadow: 0 3px 5px -1px rgba(0,0,0,.2), 0 6px 10px 0 rgba(0,0,0,.14), 0 1px 18px 0 rgba(0,0,0,.12);
-    padding-left: 200px;
-    padding-right: 200px;
+    padding-left: 10%;
+    padding-right: 10%;
 }
 
 :host{
