--- a/src/app/food-detail/food-detail.component.html
+++ b/src/app/food-detail/food-detail.component.html
@@ -1,20 +1,64 @@
+<div fxLayout="column" fxLayoutAlign="center center">
+<div class="container" fxLayout="column" fxLayoutAlign="center center">
+  <mat-tab-group class="demo-tab-group">
+      <mat-tab label="Tab 1">
+        <ng-template mat-tab-label>
+          <mat-icon>fastfood</mat-icon>
+        </ng-template>
+        <div class="demo-tab-content">
+            <!-- Display -->
+            <mat-card class="example-card">
+            <mat-card-header>
+                <div mat-card-avatar class="example-header-image"></div>
+                <mat-card-title>{{food.name}}</mat-card-title>
+                <mat-card-subtitle>{{food.category}}</mat-card-subtitle>
+              </mat-card-header>
+              <img mat-card-image src='{{food.imgURL}}' alt="Photo of a Shiba Inu">
+              <mat-card-content>
+                <p>
+                  Price : {{food.price}}<br>
+                  Store : {{food.store}}<br>
+                  Victory : {{food.victory.length}}<br>
+                  address : {{food.address.addr}}
+                  zip: {{food.address.zip}}
+                </p>
+              </mat-card-content>
+            </mat-card>
+        </div>
+      </mat-tab>
+      <mat-tab label="Tab 2">
+        <ng-template mat-tab-label>
+          <mat-icon>update</mat-icon>
+        </ng-template>
+        <div class="demo-tab-content">
+            
+              <!-- Modifiy -->
 
-<mat-card class="example-card">
-    <mat-card-header>
-      <div mat-card-avatar class="example-header-image"></div>
-      <mat-card-title>{{food.name}}</mat-card-title>
-      <mat-card-subtitle>{{food.category}}원</mat-card-subtitle>
-    </mat-card-header>
-    <img mat-card-image src='{{food.imgURL}}' alt="Photo of a Shiba Inu">
-    <mat-card-content>
-      <p>
-        Price : {{food.price}}<br>
-        Store : {{food.store}}<br>
-        Victory : {{food.victory.length}}
-      </p>
-    </mat-card-content>
-    <mat-card-actions>
-      <button (click)="onNoClick()" mat-button>Close</button>
-      <button mat-button>Edit</button>
-    </mat-card-actions>
-  </mat-card>
+              <mat-card class="example-card">
+                  <mat-card-header>
+                    <div mat-card-avatar class="example-header-image"></div>
+                    <mat-card-title><input [(ngModel)]="food.name" matInput placeholder="name"/></mat-card-title>
+                    <mat-card-subtitle><input [(ngModel)]="food.category" matInput placeholder="name"/></mat-card-subtitle>
+                  </mat-card-header>
+                  <img mat-card-image src='{{food.imgURL}}' alt="Photo of a Shiba Inu">
+                  <mat-card-content>
+                    <p>
+                      Price : <input [(ngModel)]="food.price" matInput placeholder="name"/><br>
+                      Store : <input [(ngModel)]="food.store" matInput placeholder="name"/><br>
+                      Victory : {{food.victory.length}}<br>
+                      address : <input [(ngModel)]="food.address" matInput placeholder="name"/>
+                      zip: {{food.address.zip}}
+                    </p>
+                  </mat-card-content>
+
+                  <mat-card-actions>
+                      <button mat-button>Update</button>
+                    </mat-card-actions>
+                </mat-card>
+
+               
+        </div>  
+      </mat-tab>
+    </mat-tab-group>
+</div>
+</div>
