--- a/src/app/myfood-table/myfood-table.component.html
+++ b/src/app/myfood-table/myfood-table.component.html
@@ -13,7 +13,7 @@
 
     <!-- ID Column -->
     <ng-container matColumnDef="name">
-      <mat-header-cell *matHeaderCellDef mat-sort-header> NAME </mat-header-cell>
+      <mat-header-cell *matHeaderCellDef mat-sort-header> Name </mat-header-cell>
       <mat-cell *matCellDef="let row"> {{row.name}} </mat-cell>
     </ng-container>
 
