modifiy: make linke to detail page from my-food table

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,3 +1,4 @@
+<div fxLayout="column" fxLayoutAlign="center stretch">
 <div class='container' fxLayout="row" fxLayoutAlign="space-evenly center">
   <div id="background"  fxLayout="row" fxLayoutAlign="space-evenly end" >
 
@@ -7,4 +8,7 @@
     <img src="../../assets/image/arrow.png"  class="arrow" alt="">
     <a><img class="stamp" src="../../assets/image/ohmuckji.png" alt="" (click)="openDialog()"></a>
     </div>
+</div>
+</div>
+<app-footer></app-footer>
 </div>
