--- a/src/app/myfood-table/myfood-table.component.html
+++ b/src/app/myfood-table/myfood-table.component.html
@@ -42,7 +42,7 @@
           </ng-container>
 
     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-    <mat-row *matRowDef="let row; columns: displayedColumns;">
+    <mat-row *matRowDef="let row; columns: displayedColumns;" (click)="moveToDetail(row.id)">
     </mat-row>
   </mat-table>
 
