--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,8 @@
 /* Master Styles */
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
+
+
 h1 {
   color: #369;
   font-family: Arial, Helvetica, sans-serif;
@@ -51,6 +53,7 @@ button:disabled {
 
 body{
   margin: 0px 0px 0px 0px;
+  background-color: white;
 }
 /*
 Copyright 2017-2018 Google Inc. All Rights Reserved.
