--- a/src/app/battle/battle.component.html
+++ b/src/app/battle/battle.component.html
@@ -1,22 +1,21 @@
 <ng-container *ngIf="final; then thenTemplate; else elseTemplate"></ng-container>
 <ng-template #thenTemplate>
   <div class="round-banner" fxLayout="row"  fxLayoutAlign="center ">
-    <b> Victory </b>
+    <b> Final Winner </b>
   </div>
   <div class="card-container" fxLayout="row"  fxLayoutAlign="center center">
     <mat-card class="example-card box1" >
       <mat-card-header>
         <div mat-card-avatar class="example-header-image"></div>
-        <mat-card-title>{{firstFood.name}}</mat-card-title>
-        <mat-card-subtitle>{{firstFood.category}}</mat-card-subtitle>
+        <mat-card-title>{{finalFood.name}}</mat-card-title>
+        <mat-card-subtitle>{{finalFood.category}}</mat-card-subtitle>
       </mat-card-header>
       <img mat-card-image  class="battleimg" src={{firstFood.imgURL}} >
       <mat-card-content>
         <p>
-          price : {{firstFood.price}} <br>
-          address : {{firstFood.address.addr}} <br>
-       
-          portion : {{firstFood.portion}} <br>
+          price : {{finalFood.price}} <br>
+          address : {{finalFood.address.addr}} <br>
+          portion : {{finalFood.portion}} <br>
         </p>
       </mat-card-content>
       <mat-card-actions>
@@ -43,7 +42,6 @@
         <p>
           price : {{firstFood.price}} <br>
           address : {{firstFood.address.addr}} <br>
-       
           portion : {{firstFood.portion}} <br>
         </p>
       </mat-card-content>
@@ -53,7 +51,8 @@
     
     </mat-card>
     </div>
-    <img class="versus" src="http://static1.comicvine.com/uploads/original/11112/111129141/5440487-1122329314-52705.png">
+    
+    <h2>VS</h2>
 
     <div class="card-container" fxLayout="row"  fxLayoutAlign="center center">
       <mat-card class="example-card box1" >
@@ -67,7 +66,6 @@
           <p>
             price : {{secondFood.price}} <br>
             address : {{secondFood.address.addr}} <br>
-           
             portion : {{secondFood.portion}} <br>
           </p>
         </mat-card-content>
