--- a/src/app/mypage/mypage.component.html
+++ b/src/app/mypage/mypage.component.html
@@ -67,7 +67,7 @@
         </mat-tab>
       
         <mat-tab label="History">
-
+            <app-histroy></app-histroy>
         </mat-tab>
       </mat-tab-group>
       <br>
