--- a/src/app/food-detail/food-detail.component.html
+++ b/src/app/food-detail/food-detail.component.html
@@ -19,13 +19,14 @@
                   Price : {{food.price}}<br>
                   Store : {{food.store}}<br>
                   Victory : {{food.victory.length}}<br>
-                  address : {{food.address.addr}}
-                  zip: {{food.address.zip}}
+                  address : {{food.address.addr}}<br>
                 </p>
+
               </mat-card-content>
             </mat-card>
         </div>
       </mat-tab>
+      
       <mat-tab label="Tab 2">
         <ng-template mat-tab-label>
           <mat-icon>update</mat-icon>
@@ -37,22 +38,26 @@
               <mat-card class="example-card">
                   <mat-card-header>
                     <div mat-card-avatar class="example-header-image"></div>
-                    <mat-card-title><input [(ngModel)]="food.name" matInput placeholder="name"/></mat-card-title>
-                    <mat-card-subtitle><input [(ngModel)]="food.category" matInput placeholder="name"/></mat-card-subtitle>
+                    <mat-card-title><input class="inputWidth" [(ngModel)]="food.name" matInput placeholder="name"/></mat-card-title>
+                    <mat-card-subtitle><input class="inputWidth" [(ngModel)]="food.category" matInput placeholder="name"/></mat-card-subtitle>
                   </mat-card-header>
                   <img mat-card-image src='{{food.imgURL}}' alt="Photo of a Shiba Inu">
                   <mat-card-content>
                     <p>
-                      Price : <input [(ngModel)]="food.price" matInput placeholder="name"/><br>
-                      Store : <input [(ngModel)]="food.store" matInput placeholder="name"/><br>
+                      Price : <input class="inputWidth" [(ngModel)]="food.price" matInput placeholder="name"/><br>
+                      Store : <input class="inputWidth" [(ngModel)]="food.store" matInput placeholder="name"/><br>
                       Victory : {{food.victory.length}}<br>
-                      address : <input [(ngModel)]="food.address" matInput placeholder="name"/>
-                      zip: {{food.address.zip}}
+                      Address :  <label *ngIf="addr">{{food.address.addr}}</label>
+                      <btn-daum-address (result)="setDaumAddressApi($event)" [options]="daumAddressOptions" required #addr></btn-daum-address>
+                     
+                      <br>
+                     <!-- address : <input class="inputWidth" [(ngModel)]="food.address.addr" matInput placeholder="name"/><br>-->
+                      
                     </p>
                   </mat-card-content>
 
                   <mat-card-actions>
-                      <button mat-button>Update</button>
+                      <button mat-rasied-button (click)="update()">Update</button>
                     </mat-card-actions>
                 </mat-card>
 
