--- a/src/app/battle/battle.component.css
+++ b/src/app/battle/battle.component.css
@@ -1,6 +1,6 @@
 .example-card {
     background-color: #f1f1f1;
-    width: 400px;
+    min-width: 400px;
   }
 
   .example-header-image {
@@ -9,19 +9,21 @@
   }
 
 
-.versus{
-    position: relative;
-    max-width: 10%;
-}
+
 
 .round-banner{
-  margin-top: 100px;
+  margin-top: 70px;
   font-size : 4em;
-  color : #e03b3b;
+  color : rgb(19.1%, 19.1%, 19.1%);
 }
 
-.battleimg{
-  max-height: 300px;
+.round-banner h1{
+  font-family: "Open Sans", sans-serif;
+  font-weight: 300;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  font-size : 1em;
+
 }
 
 
@@ -63,6 +65,7 @@ h1 {
 }
 .card .menu-content::after {
   clear: both;
+
 }
 .card .menu-content li {
   display: inline-block;
@@ -90,7 +93,14 @@ h1 {
 .card .wrapper:hover .data {
   -webkit-transform: translateY(0);
           transform: translateY(0);
+          background: linear-gradient(rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 1));
+
 }
+
+.card .wrapper:hover .header {
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0));
+}
+
 .card .data {
   position: absolute;
   bottom: 0;
@@ -125,7 +135,7 @@ h1 {
 }
 
 .example-2 .wrapper {
-  background: url(https://tvseriescritic.files.wordpress.com/2016/10/stranger-things-bicycle-lights-children.jpg) center/cover no-repeat;
+  min-width: 400px;
 }
 .example-2 .wrapper:hover .menu-content span {
   -webkit-transform: translate(-50%, -10px);
@@ -193,3 +203,10 @@ h1 {
   opacity: 1;
 }
 
+#firstAni{
+  margin-right: 400px;
+}
+
+#secondAni{
+  margin-left : 400px;
+}
