add : google maps in food-detail

--- a/src/app/food-detail/food-detail.component.css
+++ b/src/app/food-detail/food-detail.component.css
@@ -1,5 +1,6 @@
 .example-card {
-    max-width: 400px;
+    
+    max-width: 600px;
   }
   
 .example-header-image {
@@ -18,4 +19,8 @@
 .container{
   max-width: 600px;
   margin-top: 100px;
+}
+
+agm-map {
+  height: 300px;
 }
