--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,7 @@
 /* Master Styles */
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:300,400,700);
+@import url(https://fonts.googleapis.com/css?family=Roboto);
 
 
 h1 {
