--- a/src/app/histroy/histroy.component.html
+++ b/src/app/histroy/histroy.component.html
@@ -11,30 +11,30 @@
       <!-- ID Column -->
       <ng-container matColumnDef="name">
         <mat-header-cell *matHeaderCellDef mat-sort-header> Name </mat-header-cell>
-        <mat-cell *matCellDef="let row"> {{row.food.name}} </mat-cell>
+        <mat-cell *matCellDef="let row"> {{row.winner.name}} </mat-cell>
       </ng-container>
   
       <!-- Progress Column -->
       <ng-container matColumnDef="price">
         <mat-header-cell *matHeaderCellDef mat-sort-header> Price </mat-header-cell>
-        <mat-cell *matCellDef="let row"> {{row.food.price}} </mat-cell>
+        <mat-cell *matCellDef="let row"> {{row.winner.price}} </mat-cell>
       </ng-container>
   
       <!-- Name Column -->
       <ng-container matColumnDef="store">
         <mat-header-cell *matHeaderCellDef mat-sort-header> Store </mat-header-cell>
-        <mat-cell *matCellDef="let row"> {{row.food.store}} </mat-cell>
+        <mat-cell *matCellDef="let row"> {{row.winner.store}} </mat-cell>
       </ng-container>
   
       <!-- Color Column -->
       <ng-container matColumnDef="date">
-        <mat-header-cell *matHeaderCellDef mat-sort-header> Category </mat-header-cell>
-        <mat-cell *matCellDef="let row" > {{row.datetime}} </mat-cell>
+        <mat-header-cell *matHeaderCellDef mat-sort-header> date </mat-header-cell>
+        <mat-cell *matCellDef="let row" > {{row.datetime | date}} </mat-cell>
       </ng-container>
  
   
       <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-      <mat-row *matRowDef="let row; columns: displayedColumns;" (click)="moveToDetail(row.food.id)">
+      <mat-row *matRowDef="let row; columns: displayedColumns;" (click)="moveToDetail(row.foodid)">
       </mat-row>
     </mat-table>
   
